# monitor

./: .circuit_breaker_state  .env.example  PLAN.md  PROMPT.md  SERVICES_STATUS.md  VISION_SETUP.md  check_data.py  nixpacks.toml  progress.json  pyproject.toml  requirements.txt  status.json
app/: config.py  main.py
app/api/: routes.py  sse.py
app/core/: cache.py  database.py  scheduler.py
app/services/: air_quality.py  bikes.py  cameras.py  emergency.py  events.py  flightradar.py  flights.py  hackernews.py  map_data.py  markets.py  news.py  parking.py  ticker.py  traffic.py  trains.py  transit.py  vision.py  weather.py
app/templates/: index.html
app/templates/partials/: ai_detection.html  air_quality.html  bikes.html  cameras.html  emergency.html  events.html  flights.html  hackernews.html  markets.html  news.html  parking.html  ticker.html  trains.html  transit.html  vision_detection.html  weather.html
scripts/: test_parking.py
static/css/: bloomberg.css
