[project]
name = "amsterdam-monitor"
version = "0.1.0"
description = "Amsterdam Situation Monitor Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.2",
    "sse-starlette>=1.8.2",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "httpx-curl-cffi>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "yt-dlp>=2023.12.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
